RESOLVED FIXED13976
getPresentationAttribute not implemented
https://bugs.webkit.org/show_bug.cgi?id=13976
Summary getPresentationAttribute not implemented
Rob Buis
Reported 2007-06-02 01:20:08 PDT
SVGStylable::getPresentationAttribute is not implemented either in code or bindings.
Attachments
Work in progress (5.70 KB, patch)
2007-06-02 01:43 PDT, Rob Buis
no flags
Patch including layout test (11.43 KB, patch)
2007-06-03 03:31 PDT, Rob Buis
no flags
Improved patch (29.93 KB, patch)
2007-06-06 01:48 PDT, Rob Buis
eric: review+
Rob Buis
Comment 1 2007-06-02 01:43:38 PDT
Created attachment 14838 [details] Work in progress The patch works fine except the objC bindings fail. Do not apply the patch yet or make sure only js bindings for getPresentationAttribute. Once the bindings are fixed this should be a simple review. Cheers, Rob.
Sam Weinig
Comment 2 2007-06-02 12:56:44 PDT
To get the bindings to work you need to touch both CodeGeneratorObjC.pm and CodeGeneratorJS.pm to make sure all of the bindings are rebuilt. This is needed because we are changing an idl that effects only its subclasses and we don't have any dependancy analysis in the system to notify the correct classes to regenerate in this case.
Rob Buis
Comment 3 2007-06-03 03:31:16 PDT
Created attachment 14846 [details] Patch including layout test Given Sam's comments, I think it is valid to make this reviewable. Cheers, Rob.
Eric Seidel (no email)
Comment 4 2007-06-04 11:19:35 PDT
Comment on attachment 14846 [details] Patch including layout test This check seems unnecessary: + if (SVGStyledElement::cssPropertyIdForSVGAttributeName(cssSVGAttr->name()) <= 0) + return 0; It's very possible that SVG elements could be carrying style from non-SVG attributes. I don't see why we would want to intentionally disable access to these properties via this call. Using CDATA blocks is probably easier to read than &amp;amp; ;) The test would also be clearer if it was 3 checks instead of one check for 3 things. You also don't test mutability as the spec requires. I think the code looks OK, but the test should be improved before landing.
Rob Buis
Comment 5 2007-06-06 01:48:59 PDT
Created attachment 14877 [details] Improved patch This one should be better. Cheers, Rob.
Eric Seidel (no email)
Comment 6 2007-06-06 01:55:40 PDT
Comment on attachment 14877 [details] Improved patch Looks good.
Sam Weinig
Comment 7 2007-06-08 16:37:30 PDT
Landed in feature branch in r22025.
Note You need to log in before you can comment on or make changes to this bug.