        Reviewed by Eric.

http://bugs.webkit.org/show_bug.cgi?id=13976
        getPresentationAttribute not implemented

        Implement getPresentationAttribute.



git-svn-id: http://svn.webkit.org/repository/webkit/branches/feature-branch@22025 268f45cc-cd09-0410-ab3c-d52691b4dbfc